@@ -1,6 +1,6 @@
 
-/testBeam/detPosition 0. 0. 0.7 m
-/testBeam/magField 0. 0. 3.8 tesla
+#/testBeam/detPosition 0. 0. 0.7 m
+#/testBeam/magField 0. 0. 3.8 tesla
 
 
 /output/storeOpticalInfo true
@@ -103,4 +103,4 @@
 #
 # For file-based drivers, use this to create an empty detector view:
 /vis/viewer/flush
-/run/beamOn 1
+#/run/beamOn 1
