@@ -1,3 +1,12 @@
+08/20/2013  Christopher Cowden Christopher.Cowden@cern.ch
+	- Modified scintillation readout to keep energy deposit in fibre rather
+	  than propose scintillation photons.  
+	- Introduced more optimimal geometry hierarchy to improve runtime.
+	- New geometry hierarchy does not allow direct setting of detector width.
+	  The new scheme requires number of fibres in a segment and number of segments
+	  to define the width.
+	- The new geometry improves run time by factor of 4 on top of factor of 2 to from
+	  scintillation readout.
 06/18/2013  Christopher Cowden Christopher.Cowden@cern.ch
 	- Added command to HepMCG4AsciiReader to skip to first event to read
 	- Added some elements to the CMSHFDetectorConstruction (H and C) for 
